# backend/swagger.yaml
@@ -483,6 +483,33 @@ paths:
                     type: string
                   updatedColumn:
                     type: string
+
+  /columns/draggable:
+    put:
+      summary: update two columns and move on task to the other
+      description: update two columns and move on task to the other
+      security:
+        - ApiKeyAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Column"
+      responses:
+        200:
+          description: Column updated succesfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  newColumn:
+                    type: string
+                  oldColumn:
+                    type: string
     
   #tasks routes
   /tasks:
